--- a/locales/es.json
+++ b/locales/es.json
@@ -3,60 +3,101 @@
     { "name": "Inicio", "hash": "#home" },
     { "name": "Acerca de mí", "hash": "#about" },
     { "name": "Proyectos", "hash": "#projects" },
-    { "name": "Habilidades", "hash": "#skills" },
+    { "name": "Tecnologías", "hash": "#skills" },
     { "name": "Experiencia", "hash": "#experience" },
     { "name": "Contacto", "hash": "#contact" }
   ],
-  "experiencesData": [
-    {
-      "title": "Estudiante de Ingeniería de Telecomunicaciones",
-      "location": "Madrid, España",
-      "description": "Ingeniería de Telecomunicaciones con especialización en Sonido e Imagen en la Universidad Carlos III.",
-      "icon": "education",
-      "date": "Se espera en junio de 2025"
-    },
-    {
-      "title": "Estudiante de Ingeniería Informática y Eléctrica",
-      "location": "College Park, MD",
-      "description": "Programa de intercambio de Ingeniería en la Universidad de Maryland, College Park.",
-      "icon": "education",
-      "date": "Ago 2023 - May 2024"
-    },
-    {
-      "title": "Profesor particular de Matemáticas",
-      "location": "Madrid, España",
-      "description": "Impartí lecciones útiles que enfatizan la práctica y la aplicación en la vida real. Utilicé una variedad de métodos de enseñanza según las necesidades y el estilo de aprendizaje del estudiante.",
-      "icon": "work",
-      "date": "Feb 2023 - Jun 2023"
-    },
-    {
-      "title": "Socorrista",
-      "location": "Madrid, España",
-      "description": "Garantizaba siempre vigilancia, seguridad y prevención. También proporcioné primeros auxilios cuando fue necesario e intervine en diferentes situaciones de riesgo con total éxito.",
-      "icon": "work",
-      "date": "Jun 2022 - Jun 2023 (Temporal)"
-    }
-  ],
-  "projectsData": [
-    {
-      "title": "Aplicación Reproductor de Música",
-      "description": "Clon de Spotify codificado en Kotlin y desarrollado en Android Studio. Obtiene las canciones de una base de datos de Firebase y proporciona la función de ajustar el volumen del dispositivo con la velocidad del usuario (GPS).",
-      "tags": ["Android Studio", "Kotlin", "GPS", "Google Ads", "Firebase"],
-      "imageUrl": "/music_player_preview.jpg",
-      "demoUrl": "https://appetize.io/app/2va72f4rcuub446rz5mn22ve6m?audio=true&device=pixel7pro&osVersion=13.0",
-      "codeUrl": "https://github.com/javierortizmi/MusicPlayerApp"
-    },
-    {
-      "title": "Robot con Detección de Obstáculos",
-      "description": "Proyecto de Vehículo Autónomo desarrollado en C, muestra los conocimientos adquiridos en varios periféricos controlados por la placa NUCLEO-L152RE.",
-      "tags": [
-        "C (Lenguaje de programación)",
-        "STMicroelectronics",
-        "Bluetooth"
-      ],
-      "imageUrl": "/robot_preview.jpg",
-      "demoUrl": null,
-      "codeUrl": "https://github.com/javierortizmi/AutonomousVehicle"
-    }
-  ]
+  "introData": {
+    "introParagraph": "¡Hola! Soy Javier Ortiz Millan, un estudiante de Ingeniería de Telecomunicaciones con especialización en Sonido e Imagen. Mi enfoque es la Inteligencia Artificial aplicada al Audio. También disfruto construyendo sitios y aplicaciones.",
+    "ContactBtn": "Contáctame aquí",
+    "CVBtn": "Descargar CV"
+  },
+  "experiencesData": {
+    "title": "Experiencia",
+    "experiences": [
+      {
+        "title": "Estudiante de Ingeniería de Telecomunicaciones",
+        "location": "Madrid, España",
+        "description": "Ingeniería de Telecomunicaciones con especialización en Sonido e Imagen en la Universidad Carlos III.",
+        "icon": "education",
+        "date": "Se espera en junio de 2025"
+      },
+      {
+        "title": "Estudiante de Ingeniería Informática y Eléctrica",
+        "location": "College Park, MD",
+        "description": "Programa de intercambio de Ingeniería en la Universidad de Maryland, College Park.",
+        "icon": "education",
+        "date": "Ago 2023 - May 2024"
+      },
+      {
+        "title": "Profesor particular de Matemáticas",
+        "location": "Madrid, España",
+        "description": "Impartí lecciones útiles que enfatizan la práctica y la aplicación en la vida real. Utilicé una variedad de métodos de enseñanza según las necesidades y el estilo de aprendizaje del estudiante.",
+        "icon": "work",
+        "date": "Feb 2023 - Jun 2023"
+      },
+      {
+        "title": "Socorrista",
+        "location": "Madrid, España",
+        "description": "Garantizaba siempre vigilancia, seguridad y prevención. También proporcioné primeros auxilios cuando fue necesario e intervine en diferentes situaciones de riesgo con total éxito.",
+        "icon": "work",
+        "date": "Jun 2022 - Jun 2023 (Temporal)"
+      }
+    ]
+  },
+  "projectsData": {
+    "title": "Proyectos",
+    "projects": [
+      {
+        "title": "Aplicación Reproductor de Música",
+        "description": "Clon de Spotify codificado en Kotlin y desarrollado en Android Studio. Obtiene las canciones de una base de datos de Firebase y proporciona la función de ajustar el volumen del dispositivo con la velocidad del usuario (GPS).",
+        "tags": ["Android Studio", "Kotlin", "GPS", "Google Ads", "Firebase"],
+        "imageUrl": "/music_player_preview.jpg",
+        "demoUrl": "https://appetize.io/app/2va72f4rcuub446rz5mn22ve6m?audio=true&device=pixel7pro&osVersion=13.0",
+        "codeUrl": "https://github.com/javierortizmi/MusicPlayerApp"
+      },
+      {
+        "title": "Robot con Detección de Obstáculos",
+        "description": "Proyecto de Vehículo Autónomo desarrollado en C, muestra los conocimientos adquiridos en varios periféricos controlados por la placa NUCLEO-L152RE.",
+        "tags": [
+          "C (Lenguaje de programación)",
+          "STMicroelectronics",
+          "Bluetooth"
+        ],
+        "imageUrl": "/robot_preview.jpg",
+        "demoUrl": null,
+        "codeUrl": "https://github.com/javierortizmi/AutonomousVehicle"
+      }
+    ]
+  },
+  "skillsData": {
+    "title": "Tecnologías"
+  },
+  "aboutData": {
+    "title": "Acerca de mí",
+    "paragraphs": [
+      "Después de decidir que quería seguir una carrera en <u>Telecomunicaciones</u>, empecé a preguntarme cómo podría combinar mi pasión por el intrincado mundo del audio con mi experiencia técnica. Comencé a investigar en el campo de <b>Audio IA</b> y quedé fascinado por las posibilidades.",
+
+      "Durante mi carrera en la <b>Universidad Carlos III de Madrid</b>, he tenido la oportunidad de explorar a fondo el campo de las telecomunicaciones. He cursado asignaturas como <i>programación orientada a objetos, procesamiento de señales, arquitectura de sistemas, componentes eléctricos y diseño de circuitos, microprocesadores y redes de computadoras</i>. Durante mi año de intercambio en la <b>Universidad de Maryland, College Park</b>, amplié mis conocimientos en <i>visión por computadora, inteligencia artificial, desarrollo web y de aplicaciones, y ciberseguridad.</i>",
+
+      "Actualmente en busca de <b>prácticas</b> para sumergirme más en el mundo de las telecomunicaciones, estoy emocionado por combinar mi experiencia técnica con mi habilidad para la innovación.",
+
+      "Cuando no estoy programando, disfruto produciendo música, jugando videojuegos y aprendiendo cosas nuevas.",
+
+      "¡Unámonos y <u>creemos</u> algo de magia tecnológica!"
+    ]
+  },
+  "contactData": {
+    "title": "Contáctame",
+    "description": "Por favor, contáctame directamente en javierortizmi@gmail.com o a través de este formulario.",
+    "placeholderEmail": "Tu email",
+    "placeholderMessage": "Tu mensaje",
+    "submitBtn": "Enviar"
+  },
+  "footerData": {
+    "rights": "Todos los derechos reservados.",
+    "aboutWebsite1": "Sobre la web: ",
+    "aboutWebsite2": "creada con",
+    "code": "Código Fuente"
+  }
 }
