Small fix in intro

--- a/locales/en.json
+++ b/locales/en.json
@@ -12,8 +12,8 @@
     "introParagraph2": "I'm a ",
     "introParagraph3": "Telecommunications Engineering",
     "introParagraph4": " student with a concentration in ",
-    "introParagraph5": "Sound and Image",
-    "introParagraph6": ". From Madrid, Spain",
+    "introParagraph5": "Sound and Image. ",
+    "introParagraph6": "From Madrid, Spain.",
     "ContactBtn": "Contact me here",
     "CVBtn": "Download CV"
   },
