--- a/locales/es.json
+++ b/locales/es.json
@@ -12,8 +12,8 @@
     "introParagraph2": " Estudiante de ",
     "introParagraph3": "Ingeniería de Telecomunicaciones",
     "introParagraph4": ", con especialización en ",
-    "introParagraph5": "Sonido e Imagen",
-    "introParagraph6": ". De Madrid, España.",
+    "introParagraph5": "Sonido e Imagen. ",
+    "introParagraph6": "De Madrid, España.",
     "ContactBtn": "Contáctame aquí",
     "CVBtn": "Descargar CV"
   },
